# kludgine

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: audit.yml  coverage.yml  docs.yml  rust.yml
app/: Cargo.toml
app/src/: application.rs  error.rs  lib.rs  runtime.rs  window.rs
app/src/runtime/: smol.rs  tokio.rs  web_sys.rs
app/src/window/: event.rs  open.rs  runtime_window.rs
core/: Cargo.toml
core/src/: color.rs  delay.rs  error.rs  frame_renderer.rs  lib.rs  renderer.rs  scene.rs  sprite.rs  tests.rs  texture.rs
core/src/frame_renderer/: frame.rs
core/src/math/: dimension.rs  length_traits.rs  mod.rs  screen_traits.rs  surround.rs
core/src/renderer/: frame.rs
core/src/shape/: batch.rs  circle.rs  fill.rs  geometry.rs  mod.rs  path.rs  stroke.rs
core/src/sprite/: batch.rs  collection.rs  gpu_batch.rs  pipeline.rs  sheet.rs  source.rs
core/src/sprite/shaders/: sprite-srgb.vert  sprite-srgb.vert.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv
core/src/text/: bundled_fonts.rs  font.rs  mod.rs  prepared.rs
coverage/: coverage.json  index.html
examples/: aliasing.rs  animation.rs  automatic_batching.rs  basic.rs  batching.rs  clipping.rs  isometric.rs  lazy-texture.rs  offscreen.rs  ortho_shapes.rs  orthotiles.rs  outline.rs  perspective_shapes.rs  plotters.rs  pong.rs  shaders.rs  shapes.rs  simple.rs  sprite_sheets.rs  sprites.rs  stress.rs  text-metrics.rs  text.rs  texture-collection.rs  texture.rs  tictactoe.rs  ui.rs
examples/assets/: grass.json  stickguy.json
examples/ui/: main.rs  main_menu.rs  old.rs
examples/xcode/: Cargo.toml
examples/xcode/src/: lib.rs
fonts/: README.md
kludgine/: Cargo.toml
kludgine-macros/: Cargo.toml
kludgine-macros/src/: lib.rs
kludgine/examples/: isometric.rs  offscreen.rs  orthotiles.rs  shapes.rs  simple.rs  sprite_sheets.rs  text.rs  ui.rs
kludgine/examples/xcode/Kludgine Example/: main.m
kludgine/examples/xcode/Kludgine Example.xcodeproj/: project.pbxproj
kludgine/examples/xcode/Kludgine Example.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
kludgine/examples/xcode/src/: lib.rs
kludgine/src/: frame.rs  lib.rs  math.rs  renderer.rs  runtime.rs  scene.rs  source_sprite.rs  sprite.rs  style.rs  texture.rs  window.rs
kludgine/src/ext/: vec.rs
kludgine/src/math/: surround.rs
kludgine/src/runtime/: web_sys.rs
kludgine/src/shape/: batch.rs  circle.rs  path.rs
kludgine/src/sprite/: collection.rs  source.rs
kludgine/src/sprite/shaders/: sprite-srgb.vert.spv  sprite.vert
kludgine/src/text/: bundled_fonts.rs  font.rs  mod.rs  prepared.rs  wrap.rs
kludgine/src/tilemap/: mod.rs
kludgine/src/ui/: grid.rs  label.rs  mod.rs  style.rs  view.rs
kludgine/src/window/: event.rs  mod.rs  open.rs  renderer.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/kludgine/: all.html  enum.AnyTexture.html  enum.KludgineError.html  enum.Origin.html  enum.ShareableTexture.html  index.html  macro.hash_map!.html  macro.hash_map.html  macro.hash_set!.html  macro.hash_set.html  macro.include_aseprite_sprite.html  macro.include_font.html  macro.include_texture.html  sidebar-items.js  struct.ClipGuard.html  struct.CollectedTexture.html  struct.Color.html  struct.Drawable.html  struct.Frame.html  struct.Graphics.html  struct.Kludgine.html  struct.KludgineId.html  struct.LazyTexture.html  struct.PreparedGraphic.html  struct.RenderingGraphics.html  struct.RequiresInitialization.html  struct.SharedTexture.html  struct.Texture.html  struct.TextureCollection.html  struct.TextureRegion.html  trait.CanRenderTo.html  trait.Clipped.html  trait.DrawableExt.html  trait.DrawableSource.html  trait.KludgineGraphics.html  trait.ScaleFactor.html  trait.ShaderScalable.html  trait.ShapeSource.html  trait.TextureSource.html  type.KludgineResult.html  (+1 more)
main/kludgine_app/: all.html  enum.CloseResponse.html  enum.Error.html  index.html  sidebar-items.js  struct.RedrawRequester.html  struct.RedrawStatus.html  struct.Runtime.html  struct.SingleWindowApplication.html  struct.WindowBuilder.html  struct.WindowHandle.html  trait.Application.html  trait.OpenableWindow.html  trait.Window.html  trait.WindowCreator.html  type.Result.html
main/kludgine_core/: all.html  enum.Error.html  index.html  macro.include_aseprite_sprite!.html  macro.include_aseprite_sprite.html  macro.include_font.html  macro.include_texture!.html  macro.include_texture.html  sidebar-items.js  struct.Color.html  type.Result.html
main/xtask/: all.html  enum.Args.html  fn.compile_shaders.html  fn.main.html  index.html  sidebar-items.js  struct.CodeCoverageConfig.html  struct.Config.html
src/: app.rs  application.rs  atlas.rs  buffer.rs  bundled_fonts.rs  color.rs  delay.rs  drawing.rs  event.rs  frame.rs  lib.rs  material.rs  math.rs  pack.rs  pipeline.rs  pod.rs  render.rs  runtime.rs  scene.rs  sealed.rs  shader.wgsl  shapes.rs  shapes.wgsl  source_sprite.rs  sprite.rs  style.rs  tests.rs  text.rs  texture.rs  theme.rs  tilemap.rs  timing.rs  ui.rs  window.rs
src/drawing/: plotters.rs
src/ext/: mod.rs
src/materials/: material.rs  mod.rs  solid.rs  textured.rs
src/math/: dimension.rs  length_traits.rs  measurement.rs  mod.rs  pixels.rs  point.rs  points.rs  rect.rs  rgx_conversions.rs  size.rs  surround.rs
src/runtime/: flattened_scene.rs  mod.rs  request.rs  smol.rs  threading.rs  tokio.rs  web_sys.rs  window.rs
src/scene2d/: mod.rs  perspective.rs  screen.rs
src/shaders/: mod.rs
src/shape/: batch.rs  circle.rs  fill.rs  geometry.rs  mod.rs  path.rs  stroke.rs
src/sprite/: batch.rs  collection.rs  gpu_batch.rs  pipeline.rs  sheet.rs  source.rs
src/style/: alignment.rs  any.rs  background_color.rs  colors.rs  fallback.rs  font_family.rs  font_size.rs  font_style.rs  foreground_color.rs  weight.rs
src/text/: bundled_fonts.rs  font.rs  mod.rs  prepared.rs  rich.rs  wrap.rs
src/theme/: minimal.rs
src/tilemap/: mod.rs
src/ui/: arena.rs  (+17 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+4942 files in other folders)
