[package]
name = "kludgine"
version = "0.6.0"
edition = "2021"

[features]
default = ["app", "image", "cosmic-text"]
app = ["dep:appit"]

[dependencies]
appit = { git = "https://github.com/khonsulabs/appit", optional = true }
wgpu = { version = "0.18.0", features = ["expose-ids"] }
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
lyon_tessellation = "1.0.1"
image = { version = "0.24.6", optional = true, default-features = false }
cosmic-text = { version = "0.10.0", optional = true }
alot = "0.3.0"
ahash = { version = "0.8.3", default-features = false }
etagere = "0.2.8"
figures = { git = "https://github.com/khonsulabs/figures", features = [
    "wgpu",
    "winit",
    "bytemuck",
    "euclid",
] }
smallvec = "1.11.0"
intentional = "0.1.1"
unicode-bidi = "0.3.13"
justjson = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "0.18.0"
features = ["webgl"]

[dev-dependencies]
image = { version = "0.24.6", features = ["png"] }

# [patch.crates-io]
# intentional = { path = "../intentional" }

# [patch."https://github.com/khonsulabs/appit"]
# appit = { path = "../appit" }

# [patch."https://github.com/khonsulabs/figures"]
# figures = { path = "../figures" }

# [patch."https://github.com/khonsulabs/shelf-packer"]
# shelf-packer = { path = "../shelf-packer" }
