[package]
name = "kludgine"
version = "0.11.0"
edition = "2021"
description = "A wgpu-powered 2d graphics library with optional windowing support"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "wgpu"]
categories = ["graphics", "rendering::engine", "game-engines"]
repository = "https://github.com/khonsulabs/kludgine"
rust-version = "1.81.0"

[features]
default = ["app", "image", "cosmic-text"]
app = ["dep:appit"]
plotters = ["dep:plotters", "dep:plotters-backend"]

[dependencies]
appit = { git = "https://github.com/khonsulabs/appit", optional = true, features = [
    "rwh_06",
] }
wgpu = { version = "24.0.1" }
pollster = "0.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
lyon_tessellation = "1.0.1"
image = { version = "0.25.1", optional = true, default-features = false }
cosmic-text = { version = "0.12.0", optional = true }
alot = "0.3.0"
ahash = "0.8.3"
etagere = "0.2.8"
figures = { git = "https://github.com/khonsulabs/figures", features = [
    "wgpu",
    "winit",
    "bytemuck",
    "euclid",
] }
smallvec = "1.11.0"
intentional = "0.1.1"
unicode-bidi = "0.3.13"
justjson = "0.3.0"
palette = "0.7.3"
plotters = { version = "0.3.5", default-features = false, optional = true }
plotters-backend = { version = "0.3.5", default-features = false, optional = true }
raw-window-handle = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "24.0.1"
features = ["webgl"]

[dev-dependencies]
image = { version = "0.25.1", features = ["png"] }

[[example]]
name = "plotters"
required-features = ["plotters"]

# [patch.crates-io]
# intentional = { path = "../intentional" }
# appit = { path = "../appit" }

# [patch."https://github.com/khonsulabs/appit"]
# appit = { path = "../appit" }

# [patch."https://github.com/khonsulabs/figures"]
# figures = { path = "../figures" }

# [patch."https://github.com/khonsulabs/shelf-packer"]
# shelf-packer = { path = "../shelf-packer" }
