[package]
name = "kludgine-app"
version = "0.1.0-dev.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Application and Windowing for Kludgine"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "wgpu"]
categories = ["graphics", "rendering::engine", "game-engines"]
repository = "https://github.com/khonsulabs/kludgine"

[features]
default = ["smol-rt", "multiwindow"]
multiwindow = []
tokio-rt = ["tokio"]
smol-rt = ["smol", "smol-timeout", "easy-parallel"]

[dependencies]
kludgine-core = { version = "0.1.0-dev.1", path = "../core" }
parking_lot = "0.11"

tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }

smol-timeout = { version = "0.6", optional = true }
smol = { version = "1", optional = true }
easy-parallel = { version = "3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

once_cell = "1"
lazy_static = "1"
platforms = "1"
thiserror = "1"
anyhow = "1.0"
futures = "0.3"
