[package]
name = "kludgine-app"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Application and Windowing for Kludgine"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "wgpu"]
categories = ["graphics", "rendering::engine", "game-engines"]
repository = "https://github.com/khonsulabs/kludgine"
rust-version = "1.64.0"

[features]
default = ["smol", "multiwindow"]
multiwindow = []
tokio = ["dep:tokio"]
smol = ["dep:smol", "dep:smol-timeout", "dep:easy-parallel"]

[dependencies]
kludgine-core = { version = "0.4.0", path = "../core" }
parking_lot = "0.12.0"

tracing = "0.1.29"
tracing-futures = "0.2.5"

smol-timeout = { version = "0.6.0", optional = true }
smol = { version = "1.2.5", optional = true }
easy-parallel = { version = "3.2.0", optional = true }
tokio = { version = "1.16.1", features = ["full"], optional = true }

once_cell = "1.9.0"
lazy_static = "1.4.0"
thiserror = "1.0.30"
anyhow = "1.0.53"
futures = "0.3.19"
