[package]
name = "kludgine-core"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "An asynchronous app and 2d game framework"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "gui", "wgpu"]
categories = [
    "gui",
    "graphics",
    "rendering::engine",
    "game-engines",
    "asynchronous",
]
repository = "https://github.com/khonsulabs/kludgine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bundled-fonts"]
# Enable all bundled fonts. All bundled fonts are licensed under the Apache License 2.0.
# For more information, see here: https://github.com/khonsulabs/kludgine/tree/master/fonts/README.md
bundled-fonts = ["bundled-fonts-roboto"]
bundled-fonts-roboto = ["bundled-fonts-enabled"]
# Internal feature that exports the bundled_fonts module
bundled-fonts-enabled = []
serialization = ["serde", "euclid/serde", "palette/serializing"]

[dependencies]
approx = "0.5"
easygpu = "0.0.12"
easygpu-lyon = "0.0.12"
lyon_tessellation = "0.16"
image = { version=">=0.23.12", default-features=false }
palette = "0.6"
futures-timer = "3"
euclid = "0.22"
futures = "0.3"
instant = "0.1.9"
flume = "0.10"
rusttype = { version="0.9", features=["gpu_cache"] }
platforms = "1"
ttf-parser = "0.6"
json = "0.12"
serde = { version="1", optional=true, features=["derive"] }
winit = "0.25"
bytemuck = { version="1", features=["derive"] }
lazy_static = "1"
thiserror = "1"

tracing = { version="0.1" }
tracing-futures = { version="0.2" }


[dev-dependencies]
# rand = "0.7"
# futures-await-test = "0.3"
tokio = { version="1.0", features=["full"] }
image = { version=">=0.23.12", default-features=false, features=["png"] }
# maplit = "1"
