[package]
name = "kludgine-core"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "2D rendering for Kludgine"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "wgpu"]
categories = ["graphics", "rendering::engine", "game-engines"]
repository = "https://github.com/khonsulabs/kludgine"
include = [
    "/fonts",
    "/src",
    "../LICENSE-MIT",
    "../LICENSE-APACHE",
    "../COPYRIGHT",
]

[features]
default = ["bundled-fonts"]
# Enable all bundled fonts. All bundled fonts are licensed under the Apache License 2.0.
# For more information, see here: https://github.com/khonsulabs/kludgine/tree/master/fonts/README.md
bundled-fonts = ["bundled-fonts-roboto"]
bundled-fonts-roboto = ["bundled-fonts-enabled"]
# Internal feature that exports the bundled_fonts module
bundled-fonts-enabled = []
serialization = ["serde", "figures/serde", "palette/serializing"]

[dependencies]
approx = "0.5.1"
easygpu = "0.2.0"
easygpu-lyon = "0.2.0"
image = { version = "0.24.0", default-features = false }
palette = "0.6.0"
futures-timer = "3.0.2"
figures = "0.1.2"
futures = "0.3.19"
instant = "0.1.12"
flume = "0.10.10"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
ttf-parser = "0.14.0"
json = "0.12.4"
serde = { version = "1.0.136", optional = true, features = ["derive"] }
winit = "0.26.1"
bytemuck = { version = "1.7.3", features = ["derive"] }
lazy_static = "1.4.0"
thiserror = "1.0.30"

tracing = "0.1.29"
tracing-futures = "0.2.5"


[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }
image = { version = "0.24.0", default-features = false, features = ["png"] }
tracing-subscriber = "0.3.7"
