[package]
name = "kludgine"
version = "0.1.0-dev.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "An asynchronous app and 2d game framework"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "gui", "wgpu"]
categories = [
    "gui",
    "graphics",
    "rendering::engine",
    "game-engines",
    "asynchronous",
]
repository = "https://github.com/khonsulabs/kludgine"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["bundled-fonts", "smol-rt", "app", "multiwindow"]
app = ["kludgine-app"]
multiwindow = ["kludgine-app/multiwindow"]
tokio-rt = ["kludgine-app/tokio"]
smol-rt = ["kludgine-app/smol-rt"]
# Enable all bundled fonts. All bundled fonts are licensed under the Apache License 2.0.
# For more information, see here: https://github.com/khonsulabs/kludgine/tree/master/fonts/README.md
bundled-fonts = ["kludgine-core/bundled-fonts", "bundled-fonts-roboto"]
bundled-fonts-roboto = ["kludgine-core/bundled-fonts-roboto"]
serialization = ["kludgine-core/serialization"]

[dependencies]
kludgine-core = { path = "../core" }
kludgine-app = { path = "../app", optional = true }
cfg-if = "1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-futures = "0.4"
# js-sys = "0.3"
# web-sys = { version = "0.3", features = ["Window", "Element", "Document"] }
# wasm-bindgen = "0.2.74" # needs to match wgpu's version

[dev-dependencies]
rand = "0.7"
tokio = { version = "1.0", features = ["full"] }
maplit = "1"

[[example]]
name = "text"
required-features = ["bundled-fonts-roboto", "app"]

[[example]]
name = "orthotiles"
required-features = ["app"]
