[package]
name = "kludgine"
version = "0.4.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2021"
description = "An asynchronous app and 2d game framework"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "wgpu"]
categories = ["graphics", "rendering::engine", "game-engines"]
repository = "https://github.com/khonsulabs/kludgine"
rust-version = "1.64.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["bundled-fonts", "smol", "app", "multiwindow"]
multiwindow = ["app/multiwindow"]
tokio = ["app?/tokio"]
smol = ["app?/smol"]
# Enable all bundled fonts. All bundled fonts are licensed under the Apache License 2.0.
# For more information, see here: https://github.com/khonsulabs/kludgine/tree/master/fonts/README.md
bundled-fonts = ["kludgine-core/bundled-fonts", "bundled-fonts-roboto"]
bundled-fonts-roboto = ["kludgine-core/bundled-fonts-roboto"]
serde = ["kludgine-core/serde"]

[dependencies]
kludgine-core = { version = "0.4.0", path = "../core" }
# For some reason, changing this to app = { package = ".."} allows the dep:
# syntax to work as expected. Using the normal kludgine-app = { version .. }
# path causes a cryptic error when using the dep: syntax in the app feature.
app = { package = "kludgine-app", version = "0.4.0", path = "../app", optional = true, default-features = false }
cfg-if = "1.0.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-futures = "0.4"
# js-sys = "0.3"
# web-sys = { version = "0.3", features = ["Window", "Element", "Document"] }
# wasm-bindgen = "0.2.74" # needs to match wgpu's version

[dev-dependencies]
rand = "0.8.4"
tokio = { version = "1.16.1", features = ["full"] }
maplit = "1.0.2"
image = { version = "0.24.0", default-features = false, features = ["png"] }
env_logger = "0.10.0"

[[example]]
name = "text"
required-features = ["bundled-fonts-roboto", "app"]

[[example]]
name = "orthotiles"
required-features = ["app", "unstable-apis"]

[[example]]
name = "isometric"
required-features = ["app", "unstable-apis"]

[[example]]
name = "shapes"
required-features = ["app"]

[[example]]
name = "simple"
required-features = ["app"]

[[example]]
name = "sprite_sheets"
required-features = ["app"]
