[package]
name = "xcode"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xcode"
crate-type = ["staticlib", "cdylib"]

[dependencies]
kludgine = {path = "../../"}